2005-04-07  Esteban Sanchez  <steve-o@linups.org>

	* src/buoh.c: Some reorder of the code.
	(buoh_gui_copy_uri_to_clipboard): New function that copies the URI
	of the selected comic to the clipboard
	(buoh_gui_popup_copy_uri_cb): Implemented.
	(buoh_gui_popup_delete_cb): Implemented.

2005-03-11  Esteban Sanchez  <steve-o@linups.org>

	* src/buoh.c: Change the notebook to the image only when the
	uri exists.
	(buoh_gui_show_comic_properties): redefined, now it receives a Buoh object
	(buoh_gui_show_comic_properties_cb): added, it's a callback to show
	the comic properties dialog.
	(buoh_window_resize): now receive a Buoh.

	* src/callbacks.[ch]: buoh_gui_new_activate and buoh_gui_new_dialog_reset
	removed.

	* interfaces/buoh.glade: new_comic_dialog removed. "New" menu button
	removed.

2005-03-11  Pablo Arroyo  <zioma@linups.org>

	* src/buoh.c: popup menu for the user comic list.

2005-03-07  Esteban Sanchez  <steve-o@linups.org>

	* src/buoh.c: MAX_SCALE and MIN_SCALE reduced.
	- The zoom is applied when the comic is loading
	- The memory leak was not really fixed on the other comic. Now it is.

2005-03-04  Esteban Sanchez  <steve-o@linups.org>

	* src/comic.c: Fixed a huge memory leak when loading the pixbuf.

	* src/buoh.c: Check if the URI exists before fetching a comic (no more
	not founded errors!)

2005-03-02  Esteban Sanchez  <steve-o@linups.org>

	* src/comic-simple.[ch]: Added an attribute that indicates if the comic
	restrictions. It's an array[8] of boolean values, the index is a
	GDateWeekday.
	
	* src/buoh.c (buoh_load_supported_comic_list): Load the restrictions from
	XML file.
	- Some memory liberated.

2005-02-28  Esteban Sanchez  <steve-o@linups.org>

	* help/comics.txt: Deleted

	* data/comics.xml: Added all the comics that were on comics.txt
	
	* interfaces/buoh.glade: Added a button that shows the current page (in
	comic simples will be the date) of the current comic.

	* src/comic.[ch], comic-simple.[ch]: Added a function that returns the